@@ -4,5 +4,5 @@
 RewriteEngine on
 
 #	Pretty board urls
-RewriteRule ^([-_a-zA-Z0-9]+)/?$ ./index.php?board=$1.0 [L,QSA]
-RewriteRule ^([-_a-zA-Z0-9]+)/([0-9]*)/?$ ./index.php?board=$1.$2 [L,QSA]
+RewriteRule ^([-_a-zA-Z0-9]+)/?$ ./index.php?action=messageindex;board=$1.0 [L,QSA]
+RewriteRule ^([-_a-zA-Z0-9]+)/([0-9]*)/?$ ./index.php?action=messageindex;board=$1.$2 [L,QSA]
